# FareScope

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  compose.production.yaml  compose.yaml
server/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 20260720_0001_initial_persistence_schema.py  20260720_0002_hot_path_indexes.py  20260720_0003_calendar_price_observations.py  20260720_0004_fare_read_models.py  20260720_0005_trim_history_indexes.py  20260720_0006_alert_evaluation_marker.py  20260720_0007_collection_health_index.py  20260720_0008_username_identity.py  20260720_0009_drop_invitations.py  20260720_0010_separate_target_price.py  20260720_0011_notification_channel_schedules.py  20260720_0012_observation_archive_schema.py  20260721_0013_daily_trend_aggregates.py  20260721_0014_export_jobs.py  20260721_0015_saved_comparisons.py
server/app/: __init__.py  main.py  settings.py
server/app/api/: dependencies.py  pagination.py  router.py
server/app/collectors/: __init__.py  contracts.py  schema.py
server/app/db/: __init__.py  advisory_locks.py  partitions.py  session.py
server/app/domain/: __init__.py  notification_schedule.py  search.py
server/app/maintenance/: __init__.py  daily_trends.py
server/app/middleware/: __init__.py  request_context.py
server/app/models/: __init__.py  collection.py  comparisons.py  enums.py  exports.py  identity.py  mixins.py  notifications.py  search.py
server/app/repositories/: __init__.py  canonical_searches.py  subscriptions.py
server/app/security/: __init__.py  passwords.py  secret_box.py  tokens.py
server/app/services/: __init__.py  alerts.py  collection_dispatch.py  collection_operations.py  collection_persistence.py  collection_realtime.py  collection_runs.py  collection_scheduler.py  collection_visibility.py  comparisons.py  daily_trends.py  export_data.py  export_files.py  (+6 more)
server/performance/: README.md  __init__.py  concurrent_benchmark.py  contracts.py  create_database.py  explain_hot_queries.sql  generate_load.sql  profile_daily_trend_maintenance.py  profile_fare_queries.py  safety.py  seed_database.py  verify_daily_trends.py
server/tests/: test_health.py
(+175 files in other folders)
