[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "farescope-server"
version = "0.1.0"
description = "FareScope API, collection, analysis, and notification services"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.15,<2",
    "asyncpg>=0.30,<1",
    "celery[redis]>=5.5,<6",
    "cryptography>=45,<47",
    "email-validator>=2.2,<3",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.8,<3",
    "redis>=5.2,<7",
    "pwdlib[argon2]>=0.2,<1",
    "sqlalchemy[asyncio]>=2.0.38,<3",
    "structlog>=25.1,<26",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
collector = [
  "playwright==1.52.0",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "postgres: requires a migrated PostgreSQL database configured for integration tests",
  "redis: requires a Redis instance configured for integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
